Begin work on 1.2

--- a/src/main/resources/templates/error/418.html
+++ b/src/main/resources/templates/error/418.html
@@ -3,7 +3,7 @@
   -->
 <!DOCTYPE html>
 <html>
-<link rel="stylesheet" href="https://severalcircles.com/flames/assets/theneutronstyle.flames">
+<link rel="stylesheet" href="https://severalcircles.com/flames/assets/flames.css">
 <head>
     <div class="center">
         <h1>Something's not <i>quite</i> right here.</h1>
